Refactor of focus mode: Moving code to new file cMain_Focus. Split funktionality of handlefocus mode between separate functions. Changed focus mode to look for the second to last save step instead of the last one.

--- a/src/Factorio-TAS-Generator.vcxproj
+++ b/src/Factorio-TAS-Generator.vcxproj
@@ -175,6 +175,7 @@
   <ItemGroup>
     <ClCompile Include="cApp.cpp" />
     <ClCompile Include="cMain.cpp" />
+    <ClCompile Include="cMain_Focus.cpp" />
     <ClCompile Include="CommandStack.cpp" />
     <ClCompile Include="DialogProgressBar.cpp" />
     <ClCompile Include="GenerateScript.cpp" />
