--- a/src/Factorio-TAS-Generator.vcxproj
+++ b/src/Factorio-TAS-Generator.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="cApp.cpp" />
     <ClCompile Include="cMain.cpp" />
     <ClCompile Include="cMain_Focus.cpp" />
+    <ClCompile Include="cMain_Highlighter.cpp" />
     <ClCompile Include="CommandStack.cpp" />
     <ClCompile Include="DialogProgressBar.cpp" />
     <ClCompile Include="GenerateScript.cpp" />
@@ -207,6 +208,7 @@
     <ClInclude Include="Data\utils.h" />
     <ClInclude Include="GenerateScript.h" />
     <ClInclude Include="GUI_Base.h" />
+    <ClInclude Include="HighlighterThreads.h" />
     <ClInclude Include="ImportStepsPanel.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="nlohmann\json.hpp" />
